--- a/Popular_Movies_Stage01/app/build.gradle
+++ b/Popular_Movies_Stage01/app/build.gradle
@@ -73,9 +73,17 @@ dependencies {
     // RecyclerView
     implementation 'com.android.support:recyclerview-v7:27.1.1'
 
-    // Glide
-    implementation 'com.github.bumptech.glide:glide:4.7.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+    // Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+//    // Glide
+//    implementation 'com.github.bumptech.glide:glide:4.7.1'
+//    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+//    // Glide RecyclerView integration library
+//    implementation("com.github.bumptech.glide:recyclerview-integration:4.7.1"){
+//        // Excludes the Support Library because it is already included by Glide
+//        transitive = false;
+//    }
 
     // ButterKnife
     implementation 'com.jakewharton:butterknife:8.8.1'
