--- a/Popular_Movies_Stage01/app/src/main/AndroidManifest.xml
+++ b/Popular_Movies_Stage01/app/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
     package="com.example.full_dream.popularmoviesstage1">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
