--- a/Popular_Movies_Stage02/app/build.gradle
+++ b/Popular_Movies_Stage02/app/build.gradle
@@ -81,7 +81,7 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
-    // Retrofit
+    // Retrofit 2
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     // Moshi converter
     implementation 'com.squareup.retrofit2:converter-moshi:2.4.0'
