--- a/Popular_Movies_Stage02/app/build.gradle
+++ b/Popular_Movies_Stage02/app/build.gradle
@@ -58,9 +58,13 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        debug {
+            buildConfigField 'String', "API_KEY", PMS2_TMDB_API_KEY
+        }
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'),'proguard-rules.pro'
+            buildConfigField 'String', "API_KEY", PMS2_TMDB_API_KEY
         }
     }
 }
