--- a/Popular_Movies_Stage02/app/build.gradle
+++ b/Popular_Movies_Stage02/app/build.gradle
@@ -73,7 +73,10 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:exifinterface:27.1.1'
+    // ConstraintLayout
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    // Floating Action Button
+    implementation 'com.android.support:design:27.1.1'
 
     // RecyclerView
     implementation 'com.android.support:recyclerview-v7:27.1.1'
