--- a/Popular_Movies_Stage02/app/build.gradle
+++ b/Popular_Movies_Stage02/app/build.gradle
@@ -70,32 +70,47 @@ android {
 }
 
 dependencies {
+    // Version Numbers
+    def room_version = "1.1.0"
+    def support_library_version = "27.1.1"
+    def constraint_layout_version = "1.1.1"
+    def picasso_version = "2.71828"
+    def butterknife_version = "8.8.1"
+    def retrofit_version = "2.4.0"
+    def moshi_version = "1.5.0"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:exifinterface:27.1.1'
+    implementation "com.android.support:appcompat-v7:$support_library_version"
+    implementation "com.android.support:exifinterface:$support_library_version"
+
+    // Android Architecture Components - Room
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    annotationProcessor "android.arch.persistence.room:compiler:$room_version"
+
     // ConstraintLayout
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation "com.android.support.constraint:constraint-layout:$constraint_layout_version"
+
     // Floating Action Button
-    implementation 'com.android.support:design:27.1.1'
+    implementation "com.android.support:design:$support_library_version"
 
     // RecyclerView
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation "com.android.support:recyclerview-v7:$support_library_version"
 
     // Picasso
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation "com.squareup.picasso:picasso:$picasso_version"
 
     // ButterKnife
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    implementation 'com.android.support:support-v4:27.1.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation "com.jakewharton:butterknife:$butterknife_version"
+    implementation "com.android.support:support-v4:$support_library_version"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$butterknife_version"
 
     // Retrofit 2
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     // Moshi converter
-    implementation 'com.squareup.retrofit2:converter-moshi:2.4.0'
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
 
     // Moshi
-    implementation 'com.squareup.moshi:moshi:1.5.0'
+    implementation "com.squareup.moshi:moshi:$moshi_version"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
