--- a/Popular_Movies_Stage02/app/build.gradle
+++ b/Popular_Movies_Stage02/app/build.gradle
@@ -71,6 +71,7 @@ android {
 
 dependencies {
     // Version Numbers
+    def live_data_and_view_model_version = "1.1.1"
     def room_version = "1.1.0"
     def support_library_version = "27.1.1"
     def constraint_layout_version = "1.1.1"
@@ -82,6 +83,10 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.android.support:appcompat-v7:$support_library_version"
     implementation "com.android.support:exifinterface:$support_library_version"
+
+    // Android Architecture Components - Live Data and View Model
+    implementation "android.arch.lifecycle:extensions:$live_data_and_view_model_version"
+    annotationProcessor "android:arch.lifecycle:compiler:$live_data_and_view_model_version"
 
     // Android Architecture Components - Room
     implementation "android.arch.persistence.room:runtime:$room_version"
