fix: Learn to use Design Support Library views ...correctly so that the FAB 'floats' as per Android ...UI patterns. Implement collapsing and expanding toolbars. Implement parallax animations in toolbar.

--- a/Popular_Movies_Stage02/app/build.gradle
+++ b/Popular_Movies_Stage02/app/build.gradle
@@ -96,7 +96,7 @@ dependencies {
     // ConstraintLayout
     implementation "com.android.support.constraint:constraint-layout:$constraint_layout_version"
 
-    // Support Library - Design Support library (FAB, Snackbar, tabs, nav drawer, etc.)
+    // Support Library - Design Support library (FAB, SnackBar, tabs, nav drawer, etc.)
     implementation "com.android.support:design:$support_library_version"
 
     // RecyclerView
