--- a/Baking/app/build.gradle
+++ b/Baking/app/build.gradle
@@ -77,6 +77,7 @@ dependencies {
     def exoplayer = "2.7.2"
     def livedata_and_viewmodel = "1.1.1"
     def timber = "4.7.1"
+    def picasso = "2.71828"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -106,6 +107,8 @@ dependencies {
     implementation "com.google.android.exoplayer:exoplayer-ui:$exoplayer"
     // Utility - Logging - Timber
     implementation "com.jakewharton.timber:timber:$timber"
+    // Utility - Image handling - Picasso
+    implementation "com.squareup.picasso:picasso:$picasso"
 
     // Testing - JUnit
     testImplementation "junit:junit:$junit"
