--- a/Baking/app/build.gradle
+++ b/Baking/app/build.gradle
@@ -49,7 +49,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.example.full_dream.baking"
-        minSdkVersion 15
+        minSdkVersion 19
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -66,7 +66,7 @@ android {
 }
 
 dependencies {
-    // Not allowed to use 28.0.0-alpha1 because it's alpha
+    // Not allowed to use 28.0.0-beta because it's beta (not stable)
     def support_library = "27.1.1"
     def constraint_layout = "1.1.2"
     def junit = "4.12"
